<resources>

    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="e_mail">E-mail</string>
    <string name="Std">Class</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="app_name">JEE Asistant</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_account_create_account">Don\'t have account? Create account</string>

    <string name="your_web_client_id">580967943535-nsbnnt67msoj5qh9pi12k223mhm4j8o4.apps.googleusercontent.com</string>
    <string name="default_web_client_id_auth">580967943535-6hps2bcpkruva518vl712pihkp37h6h4.apps.googleusercontent.com</string>
    <string name="submit">Submit</string>
    <string name="_91_xxxxxxxxx">+91 xxxxxxxxx</string>
    <string name="you_will_receive_otp_on">You will receive OTP on:</string>
    <string name="icon">icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="you_will_get_otp_on_this_phone_number">You will get OTP on this Phone number</string>
    <string name="profile_name">Profile Name</string>
    <string name="DOB">Date of Birth</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="icon_">Icon</string>
    <string name="cancel_registration">Cancel Registration</string>
    <string name="add_task">ADD TASK</string>
    <string name="completed">Completed:</string>
    <string name="total_tasks">Total Tasks:</string>
    <string name="date">Date:</string>
    <string name="my_tasks">My Tasks:</string>
    <string name="task">Task</string>
    <string name="add_task_1">ADD TASK</string>
    <string name="remind_me_for_revision">Remind me for Revision</string>
    <string name="_date">Date</string>



</resources>