<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Detail_Register">

    <EditText
        android:id="@+id/phoneName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:layout_marginBottom="30dp"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/phoneDOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneDOB"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:layout_marginBottom="30dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/phoneStd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/phoneStd"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_school_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:layout_marginBottom="30dp"
        android:hint="@string/Std"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/phonePwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phonePwd"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginBottom="40dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/reg_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="142dp"
        android:layout_height="136dp"
        android:layout_marginBottom="60dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_how_to_reg_24" />
    <Button
        android:id="@+id/reg_Btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:text="**Password should atleast contain 6 characters"
        android:textSize="10sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonePwd" />
</androidx.constraintlayout.widget.ConstraintLayout>