<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timetableRelatedActivities.AddTaskActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TaskNameOutbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:hint="@string/task"
        app:layout_constraintBottom_toTopOf="@+id/DateOutbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_round_dehaze_24"
        android:fontFamily="@font/souce_sans_light"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TaskName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/NameOutbox"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/souce_sans_light"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DateOutbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:hint="@string/_date"
        app:layout_constraintBottom_toTopOf="@+id/RevisionSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24"
        android:fontFamily="@font/souce_sans_light"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TaskDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/DateOutbox"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/souce_sans_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/add_task_1"
        android:fontFamily="@font/souce_sans_light"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="168dp"
        android:layout_height="168dp"
        app:layout_constraintBottom_toTopOf="@+id/TaskNameOutbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_checklist_24"
        android:contentDescription="@string/icon"
        android:fontFamily="@font/souce_sans_light"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/RevisionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/remind_me_for_revision"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/souce_sans_light"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="' Reminde me for Revision ' option reminds you for revision depemning upon our AI enhanced algorithm which follows your memory curve.It will atomatically add the task of revision to your daily schedule"
        app:layout_constraintBottom_toTopOf="@+id/addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        android:padding="5dp"
        android:fontFamily="@font/souce_sans_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>