<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".timetableRelatedActivities.TimetableActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/solid_black_box"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/souce_sans_light"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="dd/mm/yyyy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/souce_sans_light"/>

        <TextView
            android:id="@+id/Day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingEnd="10dp"
            android:text="Day"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/souce_sans_light"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/edit_text_bg"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l1">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/souce_sans_light"
            android:paddingEnd="2dp"
            android:text="@string/total_tasks"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/totalTask"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:background="@drawable/bg_otp_box"
            android:fontFamily="@font/souce_sans_light"
            android:gravity="center"
            android:padding="5dp"
            android:text="3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/souce_sans_light"
            android:paddingEnd="2dp"
            android:text="@string/completed"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/completedTask"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/bg_otp_box"
            android:fontFamily="@font/souce_sans_light"
            android:gravity="center"
            android:padding="5dp"
            android:text="3"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingTop="5dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l2"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/souce_sans_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_tasks"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:fontFamily="@font/source_sans_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_item_timetabal"
            android:fontFamily="@font/souce_sans_light"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription=""
        android:text="TASK"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/source_sans_bold" />

</androidx.constraintlayout.widget.ConstraintLayout>